# ggwave-kotlin

./: .aiexclude  .gitignore  CHANGELOG.md  LICENSE  README.md  build.gradle.kts
src/androidTest/java/br/com/chatnoir/ggwave_kotlin/: ExampleInstrumentedTest.kt  GGWaveCodecInstrumentedTest.kt  GGWaveWrapperInstrumentedTest.kt
src/main/cpp/: CMakeLists.txt  ggwave_kotlin.cpp
src/main/cpp/ggwave-waver-v1.5.2/include/ggwave/: ggwave.h
src/main/cpp/ggwave-waver-v1.5.2/src/: CMakeLists.txt
src/main/java/br/com/chatnoir/ggwave_kotlin/: GGWaveCodec.kt  GGWaveCodecException.kt  GGWaveParameters.kt  GGWaveWrapper.kt
src/test/java/br/com/chatnoir/ggwave_kotlin/: ExampleUnitTest.kt  GGWaveCodecExceptionTest.kt  GGWaveParametersTest.kt
